--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -36,15 +36,18 @@
 
     <!-- heights -->
     <dimen name="height_list_item_tablet">60dp</dimen>
+    <dimen name="height_toolbar_all_countries">72dp</dimen>
     <dimen name="height_share_btn">120dp</dimen>
     <dimen name="height_bottom_sheet">200dp</dimen>
     <dimen name="height_app_bar">300dp</dimen>
     <dimen name="height_splash_logo">351dp</dimen>
+    <dimen name="height_bg_launch_screen">640dp</dimen>
 
     <!-- widths -->
     <dimen name="width_arrow_tablet">60dp</dimen>
-    <dimen name="width_splash_logo">361dp</dimen>
     <dimen name="width_smallest_screen">360dp</dimen>
+    <dimen name="width_splash_logo">361dp</dimen>
+    <dimen name="width_facebook_icon">390dp</dimen>
 
     <!-- radius -->
     <dimen name="radius_cardview">4dp</dimen>
@@ -53,6 +56,6 @@
     <!-- sizes -->
     <dimen name="size_fab_custom">224dp</dimen>
     <dimen name="size_fab_max_image">192dp</dimen>
-    <dimen name="width_facebook_icon">390dp</dimen>
-    <dimen name="height_bg_launch_screen">640dp</dimen>
+    <dimen name="size_max_float_btn">60dp</dimen>
+
 </resources>
