--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -121,6 +121,16 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
+    <style name="CasualSmallTextAppearance">
+        <item name="android:fontFamily">casual</item>
+        <item name="android:shadowDy">2</item>
+        <item name="android:shadowDx">2</item>
+        <item name="android:textSize">@dimen/textAppearanceSubtitle2</item>
+        <item name="android:shadowRadius">10</item>
+        <item name="android:shadowColor">@android:color/black</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+    </style>
+
     <!-- BottomSheet Dialog-->
     <!-- Makes the bottom sheet with round top borders -->
     <style name="BottomSheetShapeAppearance" parent="ShapeAppearance.MaterialComponents.LargeComponent">
