--- a/presentation/src/main/res/drawable-v21/layout_launch_screen.xml
+++ b/presentation/src/main/res/drawable-v21/layout_launch_screen.xml
@@ -3,7 +3,7 @@
  to prevent black flashes when moving to main theme. -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-    <item android:drawable="@drawable/bg_launch_screen" />
+    <item android:drawable="@drawable/bg_dark_space" />
     <item>
         <bitmap
             android:gravity="center"
