--- a/presentation/src/main/res/drawable-v23/layout_launch_screen.xml
+++ b/presentation/src/main/res/drawable-v23/layout_launch_screen.xml
@@ -3,8 +3,8 @@
  when moving to home theme. -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-    <item android:drawable="@drawable/bg_launch_screen"/>
-    <item android:drawable="@drawable/ic_countries_seen"
+    <item android:drawable="@drawable/bg_dark_space"/>
+    <item android:drawable="@drawable/ic_splash"
         android:width="@dimen/width_splash_logo"
         android:height="@dimen/height_splash_logo"
         android:gravity="center"/>
