--- a/presentation/src/main/res/drawable/layout_launch_screen.xml
+++ b/presentation/src/main/res/drawable/layout_launch_screen.xml
@@ -4,8 +4,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:opacity="opaque">
-    <item android:drawable="@drawable/bg_launch_screen" />
-    <item android:drawable="@drawable/ic_countries_seen"
+    <item android:drawable="@drawable/bg_dark_space" />
+    <item android:drawable="@drawable/ic_splash"
         android:width="@dimen/width_splash_logo"
         android:height="@dimen/height_splash_logo"
         android:gravity="center"
