--- a/presentation/src/main/res/layout/activity_home.xml
+++ b/presentation/src/main/res/layout/activity_home.xml
@@ -116,9 +116,9 @@
             android:visibility="gone"
             android:onClick="@{() -> viewModel.onFloatBtnClicked()}"
             app:elevation="@dimen/elevation_4"
-            app:fabCustomSize="@dimen/size_fab_custom"
+            app:fabCustomSize="@dimen/size_home_fab_custom"
             app:fabSize="auto"
-            app:maxImageSize="@dimen/size_fab_max_image"
+            app:maxImageSize="@dimen/size_home_fab_max_image"
             app:rippleColor="@android:color/black"
             app:srcCompat="@drawable/ic_countries_seen" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
