--- a/presentation/src/main/res/layout/dialogue_city.xml
+++ b/presentation/src/main/res/layout/dialogue_city.xml
@@ -23,7 +23,7 @@
         android:maxLines="100"
         android:scrollbars="vertical"
         android:textAlignment="viewStart"
-        android:textSize="@dimen/headline_6" />
+        android:textSize="@dimen/headline6" />
 
     <LinearLayout
         android:layout_width="match_parent"
