--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@android:color/transparent</item>
         <item name="colorAccent">@android:color/white</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/black</item>
     </style>
 
     <!-- App theme without action bar -->
@@ -18,6 +19,7 @@
     <style name="AppTheme.Launcher">
         <item name="colorPrimaryDark">@android:color/black</item>
         <item name="android:windowBackground">@drawable/layout_launch_screen</item>
+        <item name="android:navigationBarColor">@android:color/black</item>
     </style>
 
     <style name="RecyclerViewStyle">
@@ -66,7 +68,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">@dimen/headline_6</item>
+        <item name="android:textSize">@dimen/headline6</item>
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="actionMenuTextColor">@android:color/white</item>
@@ -86,7 +88,7 @@
     </style>
 
     <style name="DialogueTitleStyle">
-        <item name="android:textSize">@dimen/textAppearanceSubtitle2</item>
+        <item name="android:textSize">@dimen/subtitle2</item>
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textStyle">bold</item>
         <item name="android:paddingStart">@dimen/offset_4</item>
@@ -125,7 +127,7 @@
         <item name="android:fontFamily">casual</item>
         <item name="android:shadowDy">2</item>
         <item name="android:shadowDx">2</item>
-        <item name="android:textSize">@dimen/textAppearanceSubtitle2</item>
+        <item name="android:textSize">@dimen/subtitle2</item>
         <item name="android:shadowRadius">10</item>
         <item name="android:shadowColor">@android:color/black</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
