--- a/presentation/src/main/res/layout/layout_bottom_sheet.xml
+++ b/presentation/src/main/res/layout/layout_bottom_sheet.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:paddingTop="@dimen/offset_20"
+    android:paddingBottom="@dimen/offset_40"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -12,6 +13,7 @@
         android:gravity="center_horizontal"
         android:paddingStart="@dimen/offset_40"
         android:paddingEnd="@dimen/offset_40"
+        android:layout_marginBottom="@dimen/offset_20"
         android:text="@string/share_title"
         android:textSize="@dimen/headline6"
         android:textStyle="bold" />
