--- a/presentation/src/main/res/layout/dialogue_city.xml
+++ b/presentation/src/main/res/layout/dialogue_city.xml
@@ -6,6 +6,14 @@
     android:orientation="vertical"
     android:padding="@dimen/offset_16">
 
+    <EditText
+        android:id="@+id/etMonth"
+        android:hint="@string/home_city_month"
+        android:inputType="textShortMessage"
+        android:autofillHints="@string/home_city_month"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <view
         android:id="@+id/letCity"
         class="ua.turskyi.travelling.widgets.LinedEditText"
@@ -28,10 +36,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingStart="@dimen/offset_16"
-        android:paddingEnd="@dimen/offset_16"
-        android:weightSum="2">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnGps"
@@ -43,9 +48,15 @@
             android:drawableStart="@drawable/ic_add_location"
             android:text="@string/dialogue_btn_gps" />
 
-        <Space
-            android:layout_width="@dimen/offset_40"
-            android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btnMonth"
+            style="@style/DialogueBtnStyle"
+            android:layout_width="0dp"
+            android:padding="@dimen/offset_10"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableStart="@drawable/ic_month"
+            android:text="@string/home_city_month" />
 
         <Button
             android:id="@+id/buttonSave"
