--- a/presentation/src/main/res/layout-large/item_city_content.xml
+++ b/presentation/src/main/res/layout-large/item_city_content.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginStart="@dimen/offset_8"
-    android:layout_marginEnd="@dimen/offset_8"
+    android:layout_marginStart="@dimen/offset8"
+    android:layout_marginEnd="@dimen/offset8"
     android:animateLayoutChanges="true"
     android:animationCache="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -23,8 +23,9 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvCity"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="@dimen/height_list_item_tablet"
             android:layout_gravity="center"
             android:padding="@dimen/dp_10"
@@ -32,5 +33,17 @@
             android:textColor="@android:color/white"
             android:textStyle="bold"
             tool:text="City" />
+
+        <TextView
+            android:id="@+id/tvMonth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:gravity="end"
+            android:textSize="@dimen/headline5"
+            android:padding="@dimen/dp_10"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            tool:text="Month" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
