--- a/presentation/src/main/res/layout/dialogue_city.xml
+++ b/presentation/src/main/res/layout/dialogue_city.xml
@@ -8,9 +8,9 @@
 
     <EditText
         android:id="@+id/etMonth"
-        android:hint="@string/home_city_month"
+        android:hint="@string/home_city_date"
         android:inputType="textShortMessage"
-        android:autofillHints="@string/home_city_month"
+        android:autofillHints="@string/home_city_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -49,14 +49,14 @@
             android:text="@string/dialogue_btn_gps" />
 
         <Button
-            android:id="@+id/btnMonth"
+            android:id="@+id/btnDate"
             style="@style/DialogueBtnStyle"
             android:layout_width="0dp"
             android:padding="@dimen/offset_10"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableStart="@drawable/ic_month"
-            android:text="@string/home_city_month" />
+            android:text="@string/home_city_date" />
 
         <Button
             android:id="@+id/buttonSave"
