--- a/presentation/src/main/res/layout/fragment_flag.xml
+++ b/presentation/src/main/res/layout/fragment_flag.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:orientation="horizontal">
+
     <com.github.chrisbanes.photoview.PhotoView
-        android:id="@+id/ivEnlarged"
+        android:id="@+id/ivEnlargedFlag"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -15,8 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:contentDescription="@string/flag"
         android:visibility="gone"
-        tools:visibility="visible"
         tools:drawableStart="@android:drawable/ic_menu_gallery"
-        android:contentDescription="@string/flag" />
+        tools:visibility="visible" />
 </LinearLayout>
