--- a/presentation/src/main/res/layout/activity_home.xml
+++ b/presentation/src/main/res/layout/activity_home.xml
@@ -93,7 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:contentDescription="@string/image"
+            android:contentDescription="@string/content_description.image"
             android:drawingCacheQuality="auto"
             android:fadeScrollbars="true"
             android:focusable="true"
@@ -116,7 +116,7 @@
             android:layout_gravity="bottom|center"
             android:layout_marginBottom="@dimen/offset_64"
             android:clickable="true"
-            android:contentDescription="@string/image"
+            android:contentDescription="@string/content_description.image"
             android:drawingCacheQuality="auto"
             android:elevation="4dp"
             android:fadeScrollbars="true"
