--- a/presentation/src/main/res/layout/fragment_flag.xml
+++ b/presentation/src/main/res/layout/fragment_flag.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:contentDescription="@string/flag"
+        android:contentDescription="@string/content_description.flag"
         android:visibility="gone"
         tools:drawableStart="@android:drawable/ic_menu_gallery"
         tools:visibility="visible" />
