--- a/presentation/src/main/res/drawable-v23/layout_launch_screen.xml
+++ b/presentation/src/main/res/drawable-v23/layout_launch_screen.xml
@@ -4,7 +4,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
     <item android:drawable="@drawable/bg_dark_space"/>
-    <item android:drawable="@drawable/ic_splash"
+    <item android:drawable="@drawable/pic_logo"
         android:width="@dimen/width_splash_logo"
         android:height="@dimen/height_splash_logo"
         android:gravity="center"/>
