--- a/presentation/src/main/res/drawable/layout_launch_screen.xml
+++ b/presentation/src/main/res/drawable/layout_launch_screen.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:opacity="opaque">
     <item android:drawable="@drawable/bg_dark_space" />
-    <item android:drawable="@drawable/ic_splash"
+    <item android:drawable="@drawable/pic_logo"
         android:width="@dimen/width_splash_logo"
         android:height="@dimen/height_splash_logo"
         android:gravity="center"
