--- a/presentation/src/main/res/layout-large/item_list_country.xml
+++ b/presentation/src/main/res/layout-large/item_list_country.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tool="http://schemas.android.com/tools"
-    android:id="@+id/llCountry"
+    android:id="@+id/ll_country"
     android:weightSum="10"
     android:background="@drawable/bg_round_shape_gray"
     style="@style/LinearLayoutForListItemStyle">
 
     <ImageView
-        android:id="@+id/ivFlag"
+        android:id="@+id/iv_flag"
         style="@style/ImageViewStyle"
         tool:visibility="gone"
         tool:src="@android:drawable/ic_menu_gallery"
@@ -15,7 +15,7 @@
 
 <!--    WebView is used in case of error while downloading image source from the internet. -->
     <ua.turskyi.travelling.widgets.ClickableWebView
-        android:id="@+id/wvFlag"
+        android:id="@+id/wv_flag"
         style="@style/ImageViewStyle"
         android:gravity="center"
         android:visibility="gone"
@@ -24,14 +24,14 @@
         android:contentDescription="@string/content_description.flag" />
 
     <TextView
-        android:id="@+id/tvCountry"
+        android:id="@+id/tv_country"
         android:layout_height="@dimen/height_list_item_tablet"
         android:textSize="@dimen/headline5"
         style="@style/TextViewStyle"
         tool:text="visited country" />
 
     <ImageView
-        android:id="@+id/ivMore"
+        android:id="@+id/iv_more"
         android:layout_width="@dimen/width_arrow_tablet"
         android:layout_height="match_parent"
         android:gravity="end|center"
