--- a/presentation/src/main/res/layout/activity_home.xml
+++ b/presentation/src/main/res/layout/activity_home.xml
@@ -39,7 +39,7 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:scrimAnimationDuration="@android:integer/config_longAnimTime"
                 app:statusBarScrim="@android:color/black"
-                app:title="...loading countries"
+                app:title="@string/home_onboarding_title"
                 app:toolbarId="@+id/toolbar">
 
                 <FrameLayout
